--- a/ex_arrays.html
+++ b/ex_arrays.html
@@ -20,11 +20,15 @@ Released under the MIT license: http://jsbin.mit-license.org
 var numbers = [1, 2, 3, 4, 5];
 var numString = '';
 
+numbers.push(6);
+numbers.shift();
+numbers.pop();
+
 for (i = 0; i < numbers.length; i++){
     numString += numbers[i] + '\n';
 }
 
-alert('We can count to 5!\n' + numString);
+alert('We can count to 5!\n' + numString + 'Oops! I mean we can count from 2 to 5 :)');
 </script>
 </body>
 </html>
